--- a/package.json
+++ b/package.json
@@ -25,15 +25,17 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-fileupload": "^1.2.1",
     "mocha-junit-reporter": "^2.0.2",
     "nyc": "^15.1.0",
     "pg": "^8.7.1",
-    "express-fileupload": "^1.2.1"
+    "pg-format": "^1.0.4"
   },
   "devDependencies": {
     "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.24.2",
-    "mocha": "^9.1.3"
+    "mocha": "^9.1.3",
+    "nodemon": "^2.0.15"
   }
 }
